# lienka

./: CMakeLists.txt  Makefile  README.md  lienka_partition_table.csv  sdkconfig  sdkconfig.old
html/: connected.tpl  controls.html  controls.tpl  controlsboard.html  controlsboard.tpl  index.html  qr-recognition.html  tutorial.html
html/css/: style.css
html/js/: common.js  controls.js  controlsboard.js  index.js  jquery-ui.min.js  parser.js  qr-recognition.js  script.js  tutorial.js
main/: CMakeLists.txt  Kconfig.projbuild  beebot_main.c  file_server.c  file_server.h  file_system.c  file_system.h  other_functionality.c  other_functionality.h  perform.c  perform.h  qr_recognition.c  qr_recognition.h  server_setup_old.c  setup_ap.c  setup_ap.h  setup_server.c  setup_server.h  setup_sta.c  setup_sta.h  stepper.c  stepper.h  translator.c  translator.h
